--- a/test.ipynb
+++ b/test.ipynb
@@ -2,42 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "9\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "sys.setrecursionlimit(int(10**4))\n",
+    "from collections import deque\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# 가족 혹은 친척들 사이의 관계를 촌수라는 단위로 표현\n",
-    "# \n",
+    "N, M = map(int, sys.stdin.readline().split())\n",
+    "graph = [list(map(int, sys.stdin.readline().strip())) for _ in range(N)]\n",
+    "dx = [0, 0, 1, -1]\n",
+    "dy = [1, -1, 0, 0]\n",
     "\n",
-    "\n"
+    "# 방문 체크를 2가지 케이스로 나눠서 진행해야함\n",
+    "# [0, 0] : 지나지않은케이스, 벽을 지나온케이스\n",
+    "visited = [[[0, 0] for _ in range(M)] for _ in range(N)]\n",
+    "\n",
+    "\n",
+    "def bfs():\n",
+    "    # 큐: x, y, 벽을 뚫었는지 여부 (1이면 이제 벽 못뚫음.)\n",
+    "    queue = deque([(0, 0, 0)])\n",
+    "    visited[0][0][0] = 1  # 비용\n",
+    "\n",
+    "    while queue:\n",
+    "        x, y, flag = queue.pop()\n",
+    "\n",
+    "        # 여기가 이슈임. 무작정 방문했다고 컨티뉴 날려버리면안됨. 두가지 경우로 나눠야함.\n",
+    "        # if visited[x][y] == 1:\n",
+    "        #     continue\n",
+    "\n",
+    "        if x == N - 1 and y == M - 1:\n",
+    "            return visited[x][y][flag]\n",
+    "\n",
+    "        for k in range(4):\n",
+    "            nx, ny = x + dx[k], y + dy[k]\n",
+    "            if 0 <= nx < N and 0 <= ny < M:\n",
+    "                # 벽이 뚫여있고, 아직 방문하지 않은 상태\n",
+    "                if graph[nx][ny] == 0 and visited[nx][ny][flag] == 0:\n",
+    "                    queue.appendleft((nx, ny, flag))\n",
+    "                    visited[nx][ny][flag] = visited[x][y][flag] + 1\n",
+    "                # 벽이 막혀있는 상태\n",
+    "                elif graph[nx][ny] == 1 and flag == 0:\n",
+    "                    queue.append((nx, ny, 1))\n",
+    "                    visited[nx][ny][1] = visited[x][y][flag] + 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "print(bfs())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "deque([4, 1, 2, 3])\n",
+      "deque([3, 4, 1, 2])\n"
      ]
     }
    ],
+   "source": [
+    "a = deque([1, 2, 3, 4])\n",
+    "a.rotate(1)\n",
+    "print(a)\n",
+    "\n",
+    "b = deque([1, 2, 3, 4])\n",
+    "b.rotate(-1)\n",
+    "b.rotate(-1)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
@@ -94,17 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys; \n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
@@ -150,27 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2, 7, 2]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 길이가 같은 두 개의 큐\n",
     "# 하나의 큐 원소 추출 -> 다른 큐에 넣음 -> 각 큐의 원소 합이 같도록\n",
@@ -231,20 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('a', 1)])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = set()\n",
     "a = 3\n",
@@ -256,17 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 11\n"
    ]
@@ -288,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
