--- a/test.ipynb
+++ b/test.ipynb
@@ -2,282 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "[0, 1, 2, 4, 7, 13, 24, 44, 81, 149, 274, 504, 927, 1705, 3136, 5768]\n",
+      "7\n",
+      "44\n",
+      "5768\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "from collections import deque\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "N, M = map(int, sys.stdin.readline().split())\n",
-    "graph = [list(map(int, sys.stdin.readline().strip())) for _ in range(N)]\n",
-    "dx = [0, 0, 1, -1]\n",
-    "dy = [1, -1, 0, 0]\n",
+    "# 정수 n, n을 1, 2, 3의 합으로 나타내는 방법의 수\n",
+    "t = int(input())\n",
     "\n",
-    "# 방문 체크를 2가지 케이스로 나눠서 진행해야함\n",
-    "# [0, 0] : 지나지않은케이스, 벽을 지나온케이스\n",
-    "visited = [[[0, 0] for _ in range(M)] for _ in range(N)]\n",
+    "arr = []\n",
     "\n",
+    "maxNum = 0\n",
+    "for _ in range(t):\n",
+    "    # 그냥 dp를 매번 구하지 말고 한번에 찾도록\n",
+    "    n = int(input())\n",
+    "    arr.append(n)\n",
+    "    maxNum = max(maxNum, n)\n",
     "\n",
-    "def bfs():\n",
-    "    # 큐: x, y, 벽을 뚫었는지 여부 (1이면 이제 벽 못뚫음.)\n",
-    "    queue = deque([(0, 0, 0)])\n",
-    "    visited[0][0][0] = 1  # 비용\n",
+    "dp = [0] * (maxNum+1)\n",
     "\n",
-    "    while queue:\n",
-    "        x, y, flag = queue.pop()\n",
+    "dp[1] = 1\n",
+    "dp[2] = 2\n",
+    "dp[3] = 4\n",
     "\n",
-    "        # 여기가 이슈임. 무작정 방문했다고 컨티뉴 날려버리면안됨. 두가지 경우로 나눠야함.\n",
-    "        # if visited[x][y] == 1:\n",
-    "        #     continue\n",
+    "for i in range(4, maxNum+1):\n",
+    "    dp[i] = (dp[i-1] + dp[i-2] + dp[i-3]) % 1000000009\n",
     "\n",
-    "        if x == N - 1 and y == M - 1:\n",
-    "            return visited[x][y][flag]\n",
-    "\n",
-    "        for k in range(4):\n",
-    "            nx, ny = x + dx[k], y + dy[k]\n",
-    "            if 0 <= nx < N and 0 <= ny < M:\n",
-    "                # 벽이 뚫여있고, 아직 방문하지 않은 상태\n",
-    "                if graph[nx][ny] == 0 and visited[nx][ny][flag] == 0:\n",
-    "                    queue.appendleft((nx, ny, flag))\n",
-    "                    visited[nx][ny][flag] = visited[x][y][flag] + 1\n",
-    "                # 벽이 막혀있는 상태\n",
-    "                elif graph[nx][ny] == 1 and flag == 0:\n",
-    "                    queue.append((nx, ny, 1))\n",
-    "                    visited[nx][ny][1] = visited[x][y][flag] + 1\n",
-    "\n",
-    "    return -1\n",
-    "\n",
-    "\n",
-    "print(bfs())"
+    "for x in arr:\n",
+    "    print(dp[x] % 1000000009)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deque([4, 1, 2, 3])\n",
-      "deque([3, 4, 1, 2])\n"
+      "1152\n"
      ]
     }
    ],
    "source": [
-    "a = deque([1, 2, 3, 4])\n",
-    "a.rotate(1)\n",
-    "print(a)\n",
-    "\n",
-    "b = deque([1, 2, 3, 4])\n",
-    "b.rotate(-1)\n",
-    "b.rotate(-1)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import sys\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
-    "input = sys.stdin.readline\n",
     "\n",
-    "# 정사각형은 서로 겹치면 안 된다\n",
-    "# 도형은 모두 연결\n",
-    "# 정사각형의 변끼리 연결. 꼭짓점과 꼭짓점과 맞닿아 있으면 안됨\n",
-    "# 정사각형 4개는 테트로미노\n",
+    "n = int(sys.stdin.readline())\n",
+    "m = int(sys.stdin.readline())\n",
+    "vip = [int(sys.stdin.readline()) for _ in range(m)]\n",
     "\n",
-    "# 크기가 N x M인 종이 위에 테트로미노 하나.\n",
-    "# 종이는 1x1크기의 칸으로 나누어져있으며, 각각의 칸에는 정수가 하나 쓰여 있다\n",
-    "# 테트로미노 하나를 적절히 놓아서 수들의 합을 최대로\n",
+    "dp = [0] * (n + 1)\n",
+    "dp[0] = 1\n",
+    "dp[1] = 1 # 1\n",
+    "dp[2] = 2 # 1 2, 2 1\n",
+    "# dp[3] = 3 # 1 2 3, 1 3 2, 2 1 3\n",
     "\n",
-    "dx = [1, 0, -1, 0]\n",
-    "dy = [0, 1, 0, -1]\n",
+    "# 점화식 : dp[n] = dp[n - 1] + dp[n - 2]\n",
+    "for i in range(3, n + 1):\n",
+    "    dp[i] = dp[i - 1] + dp[i - 2]\n",
     "\n",
-    "n, m = map(int, input().split())\n",
-    "graph = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "maxSum = 0\n",
-    "visited = [[False] * (m) for _ in range(n)]\n",
-    "\n",
-    "def dfs(x, y, sum, L):\n",
-    "\n",
-    "    if 0 <= x < n and 0 <= y < m:\n",
-    "        # dfs로 들어간 노드가 이미 방문 노드라면, return\n",
-    "        if L == 4:\n",
-    "            global maxSum\n",
-    "            maxSum = max(maxSum, sum)\n",
-    "            return\n",
-    "\n",
-    "        for i in range(4):\n",
-    "            nx = x + dx[i]\n",
-    "            ny = y + dy[i]\n",
-    "            if 0 <= nx < n and 0 <= ny < m:\n",
-    "                if not visited[nx][ny]:\n",
-    "                    visited[nx][ny] = True\n",
-    "                    dfs(nx, ny, sum + graph[nx][ny], L + 1)\n",
-    "                    visited[nx][ny] = False\n",
-    "\n",
-    "for i in range(n):\n",
+    "answer = 1 # 경우의 수\n",
+    "# vip의 유무에 따라 경우의 수를 도출\n",
+    "if m > 0:\n",
+    "    pre = 0\n",
+    "    # 반복문을 통해 vip 사이에 그룹에 들어가는 경우의 수를 확인\n",
     "    for j in range(m):\n",
-    "        visited[i][j] = True\n",
-    "        dfs(i, j, graph[i][j], 1)\n",
-    "        visited[i][j] = False\n",
-    "\n",
-    "# ㅓ, ㅗ, ㅜ, ㅏ 찾기\n",
-    "# 현재 위치에서 (-1, -1), (1, 0), (1, 1)\n",
-    "# \n",
-    "\n",
-    "print(maxSum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys; \n",
-    "sys.stdin = open(\"input.txt\", \"rt\")\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "def dfs(r, c, idx, total):\n",
-    "    global ans\n",
-    "    if ans >= total + max_val * (3 - idx):\n",
-    "        return\n",
-    "    if idx == 3:\n",
-    "        ans = max(ans, total)\n",
-    "        return\n",
-    "    else:\n",
-    "        for i in range(4):\n",
-    "            nr = r + dr[i]\n",
-    "            nc = c + dc[i]\n",
-    "            if 0 <= nr < N and 0 <= nc < M and visit[nr][nc] == 0:\n",
-    "                if idx == 1:\n",
-    "                    visit[nr][nc] = 1\n",
-    "                    dfs(r, c, idx + 1, total + arr[nr][nc])\n",
-    "                    visit[nr][nc] = 0\n",
-    "                visit[nr][nc] = 1\n",
-    "                dfs(nr, nc, idx + 1, total + arr[nr][nc])\n",
-    "                visit[nr][nc] = 0\n",
-    "\n",
-    "\n",
-    "N, M = map(int, input().split())\n",
-    "arr = [list(map(int, input().split())) for _ in range(N)]\n",
-    "visit = [([0] * M) for _ in range(N)]\n",
-    "dr = [-1, 0, 1, 0]\n",
-    "dc = [0, 1, 0, -1]\n",
-    "ans = 0\n",
-    "max_val = max(map(max, arr))\n",
-    "\n",
-    "for r in range(N):\n",
-    "    for c in range(M):\n",
-    "        visit[r][c] = 1\n",
-    "        dfs(r, c, 0, arr[r][c])\n",
-    "        visit[r][c] = 0\n",
-    "\n",
-    "print(ans)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 길이가 같은 두 개의 큐\n",
-    "# 하나의 큐 원소 추출 -> 다른 큐에 넣음 -> 각 큐의 원소 합이 같도록\n",
-    "# pop + insert = 1회 수행\n",
-    "# 필요한 최소 횟수\n",
-    "# 만들 수 없는 경우 -1\n",
-    "\n",
-    "# ex) 전체 큐의 합 = 30 -> 각 큐의 합을 15로.\n",
-    "\n",
-    "def solution(queue1, queue2):\n",
-    "    answer = 0\n",
-    "    \n",
-    "    # 안되는 경우\n",
-    "    # 1. 전체의 합이 홀수인 경우\n",
-    "    # 2. 나머지의 합 < 가장 큰 값\n",
-    "    queue_sum1 = sum(queue1)\n",
-    "    queue_sum2 = sum(queue2)\n",
-    "    total = queue_sum1 + queue_sum2\n",
-    "    if (total % 2 == 1) or (total // 2) > (total - max(max(queue1), max(queue2))):\n",
-    "        answer = -1\n",
-    "    \n",
-    "    else:\n",
-    "        # 되는 경우\n",
-    "        # 1. queue1 < queue2 -> queue1.append(queue2.pop(0))\n",
-    "        # 2. sum1 -= queue2.pop(0)\n",
-    "        \n",
-    "        # 한바퀴 돌았는데도 해결되지 않는 경우\n",
-    "        temp = queue1[:]\n",
-    "        print(temp)\n",
-    "        while queue_sum1 != queue_sum2:\n",
-    "            \n",
-    "            # sum2쪽이 더 큰 경우\n",
-    "            if queue_sum1 < queue_sum2:\n",
-    "                data = queue2.pop(0)\n",
-    "                queue_sum2 -= data\n",
-    "\n",
-    "                queue1.append(data)\n",
-    "                queue_sum1 += data\n",
-    "            else:\n",
-    "                data = queue1.pop(0)\n",
-    "                queue_sum1 -= data\n",
-    "\n",
-    "                queue2.append(data)\n",
-    "                queue_sum2 += data\n",
-    "\n",
-    "            answer += 1\n",
-    "            \n",
-    "            if temp == queue1:\n",
-    "                print(temp, queue1)\n",
-    "                print(temp == queue1)\n",
-    "                print(queue1, queue2)\n",
-    "                answer = -1\n",
-    "                break\n",
-    "    return answer\n",
-    "\n",
-    "solution([3,2,7,2], [4,6,5,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = set()\n",
-    "a = 3\n",
-    "from collections import defaultdict\n",
-    "a = defaultdict()\n",
-    "a['a'] = 1\n",
-    "a.items() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 11\n"
+    "        answer *= dp[vip[j] - 1 - pre]\n",
+    "        pre = vip[j]\n",
+    "    answer *= dp[n - pre]\n",
+    "else:\n",
+    "    answer = dp[n]\n",
+    "print(answer)"
    ]
   }
  ],
