--- a/test.ipynb
+++ b/test.ipynb
@@ -2,87 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "10\n",
+      "12\n",
+      "11\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "from collections import deque\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# F 층으로 이루어진 고층 건물\n",
-    "# 스타트링크는 G층\n",
-    "# 강호가 있는 곳은 S층\n",
-    "# G층으로 이동하려고 함\n",
+    "def cut_paper(r,c,n):\n",
+    "    num = paper[r][c]\n",
+    "    for i in range(r,r+n):\n",
+    "        for j in range(c,c+n):\n",
+    "            if paper[i][j] != num:\n",
+    "                for k in range(3):\n",
+    "                    for l in range(3):\n",
+    "                        cut_paper(r+k*(n//3),c+l*(n//3),n//3)\n",
+    "                return\n",
     "\n",
-    "# 위로 U층을 가는 버튼, 아래로 D층을 가는 버튼\n",
+    "    if num == -1:\n",
+    "        ans[0] += 1\n",
+    "    elif num == 0:\n",
+    "        ans[1] += 1\n",
+    "    else:\n",
+    "        ans[2] += 1\n",
     "\n",
-    "# G층에 도착하려면 버튼을 적어도 몇 번 눌러야 하는지\n",
-    "# G층에 갈 수 없다면 use the stairs\n",
+    "n = int(input())\n",
+    "paper = [list(map(int,input().split())) for _ in range(n)]\n",
+    "ans = [0,0,0]\n",
     "\n",
-    "# F, S, G, U, D\n",
-    "F, S, G, U, D = map(int, input().split())\n",
-    "\n",
-    "def bfs(F):\n",
-    "    q = deque()\n",
-    "    q.append((S, 0))\n",
-    "\n",
-    "    visited = [False] * (F + 1)\n",
-    "    visited[S] = True\n",
-    "\n",
-    "    while q:\n",
-    "        now, count = q.popleft()\n",
-    "\n",
-    "        # 현재의 위치가 G라면, count값을 반환\n",
-    "        if now == G:\n",
-    "            return count\n",
-    "\n",
-    "        for i in [now+U, now-D]:\n",
-    "            if 1 <= i <= F and not visited[i]:\n",
-    "                q.append((i, count + 1))\n",
-    "                visited[i] = True\n",
-    "        \n",
-    "    return False\n",
-    "\n",
-    "answer = bfs(F)\n",
-    "# 출발지와 도착지가 동일한 경우\n",
-    "if answer or S == G:\n",
-    "    print(answer)\n",
-    "else:\n",
-    "    print('use the stairs')"
+    "cut_paper(0,0,n)\n",
+    "print(*ans,sep='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 3\n",
+    "print(*a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "3 + 5 = 8\n"
      ]
     }
    ],
    "source": [
-    "a = 1\n",
-    "print(not a)"
+    "a = 3\n",
+    "b = 5\n",
+    "print(f'{a} + {b} = {a + b}')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
