--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "786432\n"
+      "11\n"
      ]
     }
    ],
@@ -18,41 +18,33 @@
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n, r, c = map(int, input().split())\n",
-    "\n",
-    "answer = 0\n",
-    "count = -1\n",
-    "\n",
-    "def dfs(x, y, n):\n",
-    "    if n == 2:\n",
-    "        global count, answer\n",
-    "        for i in range(x, x + n):\n",
-    "            for j in range(y, y + n):\n",
-    "                count += 1\n",
-    "                # i와 j가 목표와 같다면 \n",
-    "                if i == r and j == c:\n",
-    "                    answer = count\n",
-    "                    return\n",
-    "\n",
-    "        return\n",
-    "\n",
-    "    size = n // 2\n",
-    "    if r < x + size and c < y + size:\n",
-    "        count += (n ** 2) // 4 * 0\n",
-    "        dfs(x, y, size)\n",
-    "    elif r < x + size and y + size <= c:\n",
-    "        count += (n ** 2) // 4 * 1\n",
-    "        dfs(x, y + size, size)\n",
-    "    elif x + size <= r and c < y + size:\n",
-    "        count += (n ** 2) // 4 * 2\n",
-    "        dfs(x + size, y, size)\n",
-    "    elif x + size <= r and y + size <= c:\n",
-    "        count += (n ** 2) // 4 * 3\n",
-    "        dfs(x + size, y + size, size)\n",
-    "\n",
-    "dfs(0, 0, 2 ** n)\n",
-    "print(answer)"
+    "n=int(input())\n",
+    "nums=[]\n",
+    "for i in range(n):\n",
+    "    tmp=list(map(int, input().split()))\n",
+    "    nums.append(tmp)\n",
+    "def pooling(size, x, y):\n",
+    "    mid=size//2\n",
+    "    if size==2:\n",
+    "        answer=[nums[x][y], nums[x+1][y], nums[x][y+1], nums[x+1][y+1]]\n",
+    "        answer.sort()\n",
+    "        return answer[-2]\n",
+    "    lt=pooling(mid, x, y)\n",
+    "    rt=pooling(mid, x+mid, y)\n",
+    "    lb=pooling(mid, x, y+mid)\n",
+    "    rb=pooling(mid, x+mid, y+mid)\n",
+    "    answer=[lt, rt, lb, rb]\n",
+    "    answer.sort()\n",
+    "    return answer[-2]\n",
+    "print(pooling(n, 0, 0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
