--- a/test.ipynb
+++ b/test.ipynb
@@ -2,67 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\황인권\\OneDrive - 동국대학교\\문서\\CodingTest_Python\\test.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m         graph[a] \u001b[39m=\u001b[39m b\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     x, y \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     union(x, y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mprint\u001b[39m(graph)\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.stdin = open('input.txt' , 'rt')\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "graph = [0] * (n+1)\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    graph[i] = i\n",
+    "\n",
+    "def find(x):\n",
+    "    if graph[x] != x:\n",
+    "        graph[x] = find(graph[x])\n",
+    "    return graph[x]\n",
+    "\n",
+    "def union(x, y):\n",
+    "    a = find(x)\n",
+    "    b = find(y)\n",
+    "\n",
+    "    print(a, b)\n",
+    "\n",
+    "    if a < b:\n",
+    "        graph[b] = a\n",
+    "    else:\n",
+    "        graph[a] = b\n",
+    "        \n",
+    "for _ in range(n-1):\n",
+    "    x, y = map(int, input().split())\n",
+    "    union(x, y)\n",
+    "\n",
+    "print(graph)\n",
+    "\n",
+    "# for i in range(2, n+1):\n",
+    "#     print(graph[i], sep = '\\n')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n"
+      "0\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "sys.stdin = open(\"input.txt\", \"rt\")\n",
+    "sys.stdin = open('input.txt' , 'rt')\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n=int(input())\n",
-    "nums=[]\n",
-    "for i in range(n):\n",
-    "    tmp=list(map(int, input().split()))\n",
-    "    nums.append(tmp)\n",
-    "def pooling(size, x, y):\n",
-    "    mid=size//2\n",
-    "    if size==2:\n",
-    "        answer=[nums[x][y], nums[x+1][y], nums[x][y+1], nums[x+1][y+1]]\n",
-    "        answer.sort()\n",
-    "        return answer[-2]\n",
-    "    lt=pooling(mid, x, y)\n",
-    "    rt=pooling(mid, x+mid, y)\n",
-    "    lb=pooling(mid, x, y+mid)\n",
-    "    rb=pooling(mid, x+mid, y+mid)\n",
-    "    answer=[lt, rt, lb, rb]\n",
-    "    answer.sort()\n",
-    "    return answer[-2]\n",
-    "print(pooling(n, 0, 0))"
+    "n = int(input())\n",
+    "\n",
+    "dp = [0] * (10000+1)\n",
+    "dp[1] = 1\n",
+    "dp[2] = 1\n",
+    "\n",
+    "for i in range(3, n+1):\n",
+    "    dp[i] = dp[i-1] + dp[i-2]\n",
+    "\n",
+    "print(dp[n])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 + 5 = 8\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "a = 3\n",
-    "b = 5\n",
-    "print(f'{a} + {b} = {a + b}')"
+    "a = 4 // 3 * 3\n",
+    "print(a)"
    ]
   }
  ],
