--- a/프로그래머스/lv2/2. 디펜스게임.ipynb
+++ b/프로그래머스/lv2/2. 디펜스게임.ipynb
@@ -39,35 +39,6 @@
     "    \n",
     "    return answer"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 1, 'b': 1, 'c': 1}\n",
-      "['a', 'b', 'c']\n",
-      "dict_items([('a', 1), ('b', 1), ('c', 1)])\n",
-      "[('a', 1), ('b', 1), ('c', 1)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dict = {}\n",
-    "dict['a'] = 1\n",
-    "dict['b'] = 1\n",
-    "dict['c'] = 1\n",
-    "\n",
-    "print(dict)\n",
-    "print(list(dict))\n",
-    "\n",
-    "print(dict.items())\n",
-    "print(list(dict.items()))"
-   ]
   }
  ],
  "metadata": {
@@ -86,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
