--- a/프로그래머스/lv2/5. 택배상자.ipynb
+++ b/프로그래머스/lv2/5. 택배상자.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "# 원하는 상자 순서 order, 몇개의 상자를 실을 수 잇는지\n",
     "from collections import deque\n",
+    "import sys\n",
     "def solution(order):\n",
     "    answer = 0\n",
     "    \n",
@@ -67,10 +68,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "2ba6819d172d60e93b2f90e5d47af36d4f36070393882cfcbe0fef625705f185"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
