--- a/test.ipynb
+++ b/test.ipynb
@@ -2,68 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\황인권\\OneDrive - 동국대학교\\문서\\CodingTest_Python\\test.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m         graph[a] \u001b[39m=\u001b[39m b\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     x, y \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     union(x, y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/%ED%99%A9%EC%9D%B8%EA%B6%8C/OneDrive%20-%20%EB%8F%99%EA%B5%AD%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/CodingTest_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mprint\u001b[39m(graph)\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.stdin = open('input.txt' , 'rt')\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "n = int(input())\n",
-    "graph = [0] * (n+1)\n",
-    "\n",
-    "for i in range(1, n+1):\n",
-    "    graph[i] = i\n",
-    "\n",
-    "def find(x):\n",
-    "    if graph[x] != x:\n",
-    "        graph[x] = find(graph[x])\n",
-    "    return graph[x]\n",
-    "\n",
-    "def union(x, y):\n",
-    "    a = find(x)\n",
-    "    b = find(y)\n",
-    "\n",
-    "    print(a, b)\n",
-    "\n",
-    "    if a < b:\n",
-    "        graph[b] = a\n",
-    "    else:\n",
-    "        graph[a] = b\n",
-    "        \n",
-    "for _ in range(n-1):\n",
-    "    x, y = map(int, input().split())\n",
-    "    union(x, y)\n",
-    "\n",
-    "print(graph)\n",
-    "\n",
-    "# for i in range(2, n+1):\n",
-    "#     print(graph[i], sep = '\\n')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "11\n",
       "0\n"
      ]
     }
@@ -71,18 +27,112 @@
    "source": [
     "import sys\n",
     "sys.stdin = open('input.txt' , 'rt')\n",
+    "sys.setrecursionlimit(10**5)\n",
     "input = sys.stdin.readline\n",
     "\n",
     "n = int(input())\n",
     "\n",
-    "dp = [0] * (10000+1)\n",
-    "dp[1] = 1\n",
-    "dp[2] = 1\n",
+    "graph = [[] for _ in range(n+1)]\n",
     "\n",
-    "for i in range(3, n+1):\n",
-    "    dp[i] = dp[i-1] + dp[i-2]\n",
+    "for _ in range(n-1):\n",
+    "    a, b = map(int, input().split())\n",
+    "    graph[a].append(b)\n",
+    "    graph[b].append(a)\n",
     "\n",
-    "print(dp[n])\n"
+    "parent = [0] * (n+1)\n",
+    "# 1번 부터 내려가기\n",
+    "def dfs(i):\n",
+    "\n",
+    "    for x in graph[i]:\n",
+    "        # parent등록이 안되어있다면,\n",
+    "        if not parent[x]:\n",
+    "            # parent는 i가 되는 것임\n",
+    "            parent[x] = i\n",
+    "            dfs(x)\n",
+    "\n",
+    "# 자기 자신을 부모로 등록\n",
+    "parent[1] = 1\n",
+    "dfs(1)\n",
+    "print(*parent[2:], sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0012888908386230469\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "arrays = [5, 7, 9, 0, 3, 1, 6, 2 ,4 ,8]\n",
+    "\n",
+    "def quick_sort(array, start, end):\n",
+    "    if start >= end:\n",
+    "        return\n",
+    "    \n",
+    "    pivot = start\n",
+    "    left = start + 1\n",
+    "    right = end\n",
+    "\n",
+    "    while(left <= right):\n",
+    "        while(left <= end and array[left] <= array[pivot]):\n",
+    "            left += 1\n",
+    "        while(right > start and array[right] >= array[pivot]):\n",
+    "            right -= 1\n",
+    "        \n",
+    "        if left > right:\n",
+    "            array[right], array[pivot] = array[pivot], array[right]\n",
+    "        else:\n",
+    "            array[left], array[right] = array[right], array[left]\n",
+    "    \n",
+    "    quick_sort(array, start, right - 1)\n",
+    "    quick_sort(array, right + 1, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gcd(a, b):\n",
+    "    if a % b == 0:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return gcd(b, a % b)\n",
+    "print(gcd(11, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "124\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(123.523))"
    ]
   },
   {
