--- a/test.ipynb
+++ b/test.ipynb
@@ -26,34 +26,15 @@
    ],
    "source": [
     "import sys\n",
-    "sys.stdin = open('input.txt' , 'rt')\n",
-    "sys.setrecursionlimit(10**5)\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n = int(input())\n",
+    "# 방향 그래프가 주어지면 시작점에서 다른 모든 정점으로의 최단 경로 찾기\n",
     "\n",
-    "graph = [[] for _ in range(n+1)]\n",
-    "\n",
-    "for _ in range(n-1):\n",
-    "    a, b = map(int, input().split())\n",
-    "    graph[a].append(b)\n",
-    "    graph[b].append(a)\n",
-    "\n",
-    "parent = [0] * (n+1)\n",
-    "# 1번 부터 내려가기\n",
-    "def dfs(i):\n",
-    "\n",
-    "    for x in graph[i]:\n",
-    "        # parent등록이 안되어있다면,\n",
-    "        if not parent[x]:\n",
-    "            # parent는 i가 되는 것임\n",
-    "            parent[x] = i\n",
-    "            dfs(x)\n",
-    "\n",
-    "# 자기 자신을 부모로 등록\n",
-    "parent[1] = 1\n",
-    "dfs(1)\n",
-    "print(*parent[2:], sep='\\n')"
+    "# 입력\n",
+    "# 정점의 개수 V, 간선의 개수 E\n",
+    "# 1번부터 V까지\n",
+    "# 시작 정점의 번호\n",
+    "\n"
    ]
   },
   {
@@ -170,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
