--- a/test.ipynb
+++ b/test.ipynb
@@ -2,39 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "4\n",
-      "5\n",
-      "5\n",
-      "6\n",
-      "11\n",
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import sys\n",
+    "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
+    "# AEIOU 만을 사용, 길이 5 이하의 모든 단어가 수록\n",
+    "# 사전에서 첫 번째 단어는 A, AA, UUUUU\n",
     "\n",
-    "# 방향 그래프가 주어지면 시작점에서 다른 모든 정점으로의 최단 경로 찾기\n",
+    "# 단어 하나 word\n",
+    "# 단어가 사전에서 몇 번째 단어인지 return\n",
     "\n",
-    "# 입력\n",
-    "# 정점의 개수 V, 간선의 개수 E\n",
-    "# 1번부터 V까지\n",
-    "# 시작 정점의 번호\n",
-    "\n"
+    "import copy\n",
+    "def dfs(L):\n",
+    "    # 길이가 5개 넘어간다면 return\n",
+    "    if L == 5:\n",
+    "        return\n",
+    "    \n",
+    "    global word_list\n",
+    "    \n",
+    "    # 한개씩 append\n",
+    "    for i in range(5):\n",
+    "        q.append(arr[i])\n",
+    "        word_list.append(copy.deepcopy(q))\n",
+    "        \n",
+    "        dfs(L + 1)\n",
+    "        q.pop()\n",
+    "\n",
+    "def solution(word):\n",
+    "    answer = 0\n",
+    "    \n",
+    "    \n",
+    "    global q, word_list, arr\n",
+    "    \n",
+    "    q = []\n",
+    "    word_list = []\n",
+    "    arr = ['A', 'E', 'I', 'O', 'U']\n",
+    "    print(list(map(str, ''.join(arr))))\n",
+    "    \n",
+    "    dfs(0)\n",
+    "    word_list = list(map(str, ''.join(word_list)))\n",
+    "    print(word_list)\n",
+    "    # count = word_list.index([word])\n",
+    "    # print(count)\n",
+    "    \n",
+    "    return answer"
    ]
   },
   {
@@ -151,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
