--- a/test.ipynb
+++ b/test.ipynb
@@ -2,69 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prev_x, prev_y 0 1 1\n",
+      "next_x, next_y 0 1 2\n",
+      "prev_x, prev_y 0 1 2\n",
+      "next_x, next_y 0 1 3\n",
+      "(direction % 2 == 1) and (num == y2 - y1)\n",
+      "prev_x, prev_y 1 1 3\n",
+      "next_x, next_y 1 2 3\n",
+      "(direction % 2 == 0) and (num == y2 - y1)\n",
+      "prev_x, prev_y 2 2 3\n",
+      "next_x, next_y 2 2 2\n",
+      "prev_x, prev_y 2 2 2\n",
+      "next_x, next_y 2 2 1\n",
+      "(direction % 2 == 1) and (num == y2 - y1)\n",
+      "None\n",
+      "prev_x, prev_y 0 2 2\n",
+      "next_x, next_y 0 2 3\n",
+      "prev_x, prev_y 0 2 3\n",
+      "next_x, next_y 0 2 4\n",
+      "(direction % 2 == 1) and (num == y2 - y1)\n",
+      "prev_x, prev_y 1 2 4\n",
+      "next_x, next_y 1 3 4\n",
+      "prev_x, prev_y 1 3 4\n",
+      "next_x, next_y 1 4 4\n",
+      "(direction % 2 == 0) and (num == y2 - y1)\n",
+      "prev_x, prev_y 2 4 4\n",
+      "next_x, next_y 2 4 3\n",
+      "prev_x, prev_y 2 4 3\n",
+      "next_x, next_y 2 4 2\n",
+      "(direction % 2 == 1) and (num == y2 - y1)\n",
+      "None\n",
+      "(direction % 2 == 1) and (num == y2 - y1)\n",
+      "prev_x, prev_y 1 4 0\n",
+      "next_x, next_y 1 5 0\n",
+      "(direction % 2 == 0) and (num == y2 - y1)\n",
+      "prev_x, prev_y 2 5 0\n",
+      "next_x, next_y 2 5 -1\n",
+      "prev_x, prev_y 2 5 -1\n",
+      "next_x, next_y 2 5 -2\n"
+     ]
     }
    ],
    "source": [
     "import sys\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
-    "# AEIOU 만을 사용, 길이 5 이하의 모든 단어가 수록\n",
-    "# 사전에서 첫 번째 단어는 A, AA, UUUUU\n",
     "\n",
-    "# 단어 하나 word\n",
-    "# 단어가 사전에서 몇 번째 단어인지 return\n",
-    "\n",
-    "import copy\n",
-    "def dfs(L):\n",
-    "    # 길이가 5개 넘어간다면 return\n",
-    "    if L == 5:\n",
-    "        return\n",
-    "    \n",
-    "    global word_list\n",
-    "    \n",
-    "    # 한개씩 append\n",
-    "    for i in range(5):\n",
-    "        q.append(arr[i])\n",
-    "        word_list.append(copy.deepcopy(q))\n",
-    "        \n",
-    "        dfs(L + 1)\n",
-    "        q.pop()\n",
-    "\n",
-    "def solution(word):\n",
-    "    answer = 0\n",
-    "    \n",
-    "    \n",
-    "    global q, word_list, arr\n",
-    "    \n",
-    "    q = []\n",
-    "    word_list = []\n",
-    "    arr = ['A', 'E', 'I', 'O', 'U']\n",
-    "    print(list(map(str, ''.join(arr))))\n",
-    "    \n",
-    "    dfs(0)\n",
-    "    word_list = list(map(str, ''.join(word_list)))\n",
-    "    print(word_list)\n",
-    "    # count = word_list.index([word])\n",
-    "    # print(count)\n",
-    "    \n",
-    "    return answer"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
