--- a/backjoon/삼성 SW 역량 테스트 기출 문제/2. 3190 뱀.ipynb
+++ b/backjoon/삼성 SW 역량 테스트 기출 문제/2. 3190 뱀.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from collections import deque\n",
@@ -32,6 +40,40 @@
     "# X초가 끝난 뒤에 L왼쪽 또는 D오른쪽으로 90도 방향을 회전\n",
     "# X가 증가하는 순으로 주어진다\n",
     "\n",
+    "# 뱀 이동\n",
+    "def move():\n",
+    "    global snake\n",
+    "    tail = snake[-1][:]\n",
+    "\n",
+    "    # 머리부\n",
+    "    # 머리 부분은 사과먹기 진행\n",
+    "    # 가독성을 위해 nx, ny로 활용\n",
+    "    nx = snake[0][0] + dx[direction]\n",
+    "    ny = snake[0][1] + dy[direction]\n",
+    "\n",
+    "    # 범위 아웃 : return False\n",
+    "    if 0 > nx or n <= nx or 0 > ny or n <= ny:\n",
+    "        return False\n",
+    "    \n",
+    "    # 머리가 몸통안에 포함되어있다면 False를 return\n",
+    "    if [nx, ny] in snake[:]:\n",
+    "        return False\n",
+    "\n",
+    "    # 사과가 있다면 사과 지우고 머리 붙이기\n",
+    "    if graph[nx][ny] == 1:\n",
+    "        graph[nx][ny] = 0\n",
+    "        snake.insert(0, [nx, ny])\n",
+    "    # 사과가 없다면, 머리 붙이고\n",
+    "    else:\n",
+    "        snake.insert(0, [nx, ny])\n",
+    "        snake.pop()\n",
+    "    \n",
+    "    # # 뱀의 머리 이동\n",
+    "    # snake[0][0] = nx\n",
+    "    # snake[0][1] = ny\n",
+    "\n",
+    "    return True\n",
+    "\n",
     "n = int(input())\n",
     "k = int(input())\n",
     "\n",
@@ -42,61 +84,78 @@
     "\n",
     "L = int(input())\n",
     "info = deque()\n",
+    "\n",
     "for _ in range(L):\n",
     "    x, c = input().split()\n",
     "    info.append((int(x), c))\n",
     "\n",
+    "# snake = [[1, 2], [1, 1], [0, 1]]\n",
     "snake = [[0, 0]]\n",
     "time = 0\n",
     "\n",
-    "# 1. 뱀을 이동 -> snake 위치에서 해당 방향으로\n",
-    "# 2. 사과를 만나면, 뱀의 위치를 append 추가\n",
-    "# 3. 맨 끝 or 자기자신을 만나면 break\n",
     "# 상 우 하 좌\n",
     "dx = [-1, 0, 1, 0]\n",
     "dy = [0, 1, 0, -1]\n",
     "\n",
-    "now_direction = 1\n",
-    "# 맨 처음 방향은 1\n",
-    "# 오른쪽 방향 전환은 (now_direction + 1) % 4\n",
-    "# 왼쪽 방향 전환은 (now_direction + 3) % 4\n",
+    "direction = 1\n",
     "\n",
-    "def move():\n",
-    "    global time, now_direction\n",
-    "    while True:\n",
-    "        # 시간 확인\n",
-    "        if info and time == info[0][0]:\n",
-    "            t, direction = info.popleft()\n",
-    "            if direction == 'L':\n",
-    "                now_direction = (now_direction + 3) % 4\n",
-    "            else:\n",
-    "                now_direction = (now_direction + 1) % 4\n",
-    "        \n",
-    "        # snake 별 이동\n",
-    "        for i in range(len(snake)):\n",
-    "            nx = snake[i][0] + dx[now_direction]\n",
-    "            ny = snake[i][1] + dy[now_direction]\n",
-    "            # 범위를 벗어난 경우\n",
-    "            if 0 > nx or n <= nx or 0 > ny or n <= ny:\n",
-    "                return\n",
-    "            \n",
-    "            # 사과를 먹은 경우\n",
-    "            # 머리 추가\n",
-    "            if graph[nx][ny] == 1:\n",
-    "                graph[nx][ny] = 0\n",
-    "                snake.insert(0, [nx, ny])\n",
-    "                break\n",
-    "            # 해당 위치로 이동\n",
-    "            else:\n",
-    "                snake[i][0] = nx\n",
-    "                snake[i][1] = ny\n",
+    "count = 0\n",
+    "while True:\n",
+    "    count += 1\n",
     "\n",
-    "        if snake[0] in snake[1:]:\n",
-    "            return\n",
+    "    # out될 일이 있다면 break\n",
+    "    if not move():\n",
+    "        break\n",
+    "    \n",
+    "    if info and count == info[0][0]:\n",
+    "        time, dir = info.popleft()\n",
+    "        # 좌측이면, 반시계방향\n",
+    "        if dir == 'L':\n",
+    "            direction = (direction - 1) % 4\n",
+    "        else:\n",
+    "            direction = (direction + 1) % 4\n",
     "\n",
-    "        time += 1\n",
-    "move()\n",
-    "print(time)"
+    "    # print(*graph,sep='\\n')\n",
+    "    # print(snake)\n",
+    "    # print(count, direction)\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (-2) % 4\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[1, 2], [2, 3], [5, 2], [1, 2]]\n",
+    "print([1, 2] in a[1:])"
    ]
   },
   {
