--- a/test.ipynb
+++ b/test.ipynb
@@ -2,51 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prev_x, prev_y 0 1 1\n",
-      "next_x, next_y 0 1 2\n",
-      "prev_x, prev_y 0 1 2\n",
-      "next_x, next_y 0 1 3\n",
-      "(direction % 2 == 1) and (num == y2 - y1)\n",
-      "prev_x, prev_y 1 1 3\n",
-      "next_x, next_y 1 2 3\n",
-      "(direction % 2 == 0) and (num == y2 - y1)\n",
-      "prev_x, prev_y 2 2 3\n",
-      "next_x, next_y 2 2 2\n",
-      "prev_x, prev_y 2 2 2\n",
-      "next_x, next_y 2 2 1\n",
-      "(direction % 2 == 1) and (num == y2 - y1)\n",
-      "None\n",
-      "prev_x, prev_y 0 2 2\n",
-      "next_x, next_y 0 2 3\n",
-      "prev_x, prev_y 0 2 3\n",
-      "next_x, next_y 0 2 4\n",
-      "(direction % 2 == 1) and (num == y2 - y1)\n",
-      "prev_x, prev_y 1 2 4\n",
-      "next_x, next_y 1 3 4\n",
-      "prev_x, prev_y 1 3 4\n",
-      "next_x, next_y 1 4 4\n",
-      "(direction % 2 == 0) and (num == y2 - y1)\n",
-      "prev_x, prev_y 2 4 4\n",
-      "next_x, next_y 2 4 3\n",
-      "prev_x, prev_y 2 4 3\n",
-      "next_x, next_y 2 4 2\n",
-      "(direction % 2 == 1) and (num == y2 - y1)\n",
-      "None\n",
-      "(direction % 2 == 1) and (num == y2 - y1)\n",
-      "prev_x, prev_y 1 4 0\n",
-      "next_x, next_y 1 5 0\n",
-      "(direction % 2 == 0) and (num == y2 - y1)\n",
-      "prev_x, prev_y 2 5 0\n",
-      "next_x, next_y 2 5 -1\n",
-      "prev_x, prev_y 2 5 -1\n",
-      "next_x, next_y 2 5 -2\n"
+      "9\n"
      ]
     }
    ],
@@ -55,7 +18,33 @@
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "\n"
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "n,m,k = map(int,input().split())\n",
+    "\n",
+    "def find(n,m) :\n",
+    "    dp = [[0]*(m+1)]*(n+1)\n",
+    "\n",
+    "    for i in range(1,n+1) :\n",
+    "        for j in range(1,m+1) :\n",
+    "            if i == 1 and j == 1 :\n",
+    "                dp[i][j] = 1\n",
+    "                continue\n",
+    "            dp[i][j] = dp[i-1][j] + dp[i][j-1]\n",
+    "    return dp[n][m]\n",
+    "\n",
+    "if k == 0 :\n",
+    "    print(find(n,m))\n",
+    "else :\n",
+    "    dotN1 = (k-1)//m + 1\n",
+    "    dotM1 = k - (dotN1-1)*m\n",
+    "    dotN2 = n - (dotN1-1)\n",
+    "    dotM2 = m - (dotM1-1)\n",
+    "\n",
+    "    first = find(dotN1,dotM1)\n",
+    "    second = find(dotN2,dotM2)\n",
+    "\n",
+    "    print(first*second)\n"
    ]
   },
   {
@@ -172,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
