--- a/test.ipynb
+++ b/test.ipynb
@@ -2,50 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "2\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "from collections import deque\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "#1068_트리_dfs_gold5\n",
+    "\n",
     "import sys\n",
     "input = sys.stdin.readline\n",
-    "n,m,k = map(int,input().split())\n",
     "\n",
-    "def find(n,m) :\n",
-    "    dp = [[0]*(m+1)]*(n+1)\n",
+    "def dfs(v):\n",
+    "    tree[v] = -2\n",
+    "    for i in range(n): #전체 트리 반복\n",
+    "        if v == tree[i]: # 지우고자 하는 노드 v가  tree[i]에 들어있으면 tree[i]는 v의 자식\n",
+    "            dfs(i) # i의 자식도 지움\n",
+    "            \n",
+    "n = int(input())\n",
+    "tree = list(map(int, input().split())) # [-1, 0, 0, 1, 1]\n",
+    "erase = int(input())\n",
     "\n",
-    "    for i in range(1,n+1) :\n",
-    "        for j in range(1,m+1) :\n",
-    "            if i == 1 and j == 1 :\n",
-    "                dp[i][j] = 1\n",
-    "                continue\n",
-    "            dp[i][j] = dp[i-1][j] + dp[i][j-1]\n",
-    "    return dp[n][m]\n",
+    "dfs(erase)\n",
+    "cnt = 0\n",
     "\n",
-    "if k == 0 :\n",
-    "    print(find(n,m))\n",
-    "else :\n",
-    "    dotN1 = (k-1)//m + 1\n",
-    "    dotM1 = k - (dotN1-1)*m\n",
-    "    dotN2 = n - (dotN1-1)\n",
-    "    dotM2 = m - (dotM1-1)\n",
+    "for i in range(n):\n",
+    "    if tree[i] != -2 and i not in tree: #-2는 지우는 노드들 // i노드의 자식이 트리 안에 없으면 == 리프노드임\n",
+    "        cnt+=1\n",
     "\n",
-    "    first = find(dotN1,dotM1)\n",
-    "    second = find(dotN2,dotM2)\n",
-    "\n",
-    "    print(first*second)\n"
+    "print(cnt)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
