--- a/backjoon/동적 계획법/13. 10844. 쉬운 계단 수.ipynb
+++ b/backjoon/동적 계획법/13. 10844. 쉬운 계단 수.ipynb
@@ -21,7 +21,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.6"
+   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
