--- a/backjoon/동적 계획법/20. 9084 동전.ipynb
+++ b/backjoon/동적 계획법/20. 9084 동전.ipynb
@@ -42,9 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "501\n",
+      "121\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.stdin = open(\"./input/input20.txt\", \"rt\")\n",
@@ -86,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.6 (tags/v3.8.6:db45529, Sep 23 2020, 15:52:53) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
