--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,62 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0]\n",
-      "[0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
-      "[0, 0, 1, 0, 1, 0, 1, 0, 2, 0, 2, 0, 2, 0, 0, 0, 1, 0, 1, 0, 1]\n",
-      "[1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 2, 0, 3, 0, 1, 0, 2, 0, 1]\n",
-      "[2, 0, 3, 0, 4, 0, 5, 0, 4, 0, 6, 0, 4, 0, 6, 0, 3, 0, 3, 0, 1]\n",
-      "[4, 0, 6, 0, 8, 0, 10, 0, 8, 0, 12, 0, 8, 0, 12, 0, 6, 0, 6, 0, 2]\n",
-      "[8, 0, 12, 0, 8, 0, 12, 0, 10, 0, 12, 0, 10, 0, 10, 0, 8, 0, 12, 0, 8]\n",
-      "10\n"
+      "Counter({3: 3, 1: 2, 2: 1})\n",
+      "Counter({1: 1, 2: 1})\n",
+      "[(3, 3), (1, 2), (2, 1)]\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "from collections import Counter\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# 1. 0<= j <= 20까지\n",
-    "# !!2 .dp[i][j] += dp[i-1][j]!! 이건 아님!! 그대로 올라올 필요가 없다. 지금까지의 연산값만 사용하므로\n",
-    "# 3. if 0 <= j - 이번에 들어온 값 <= 20:\n",
-    "# dp[i][j-이번의 값] += dp[i-1][j]\n",
-    "# 4. if 0 <= j + 이번에 들어온 값 <= 20:\n",
-    "# dp[i][j+이번에 들어온 값] += dp[i-1][j]\n",
+    "temp = []\n",
+    "temp += (1, 3)\n",
+    "temp += (1, 3)\n",
+    "temp.extend((2, 3))\n",
     "\n",
-    "n = int(input())\n",
-    "arr = list(map(int, input().split()))\n",
+    "counter = Counter(temp)\n",
+    "print(counter)\n",
     "\n",
-    "# 마지막 값을 목표값으로 정하고 , 제거\n",
-    "target = arr[-1]\n",
-    "del arr[-1]\n",
+    "test = Counter([1, 2])\n",
+    "print(test)\n",
     "\n",
-    "# print(arr)\n",
-    "dp = [[0] * (21) for _ in range(n-1)]\n",
-    "dp[0][arr[0]] = 1\n",
     "\n",
-    "for i in range(1, n-1):\n",
-    "    for j in range(21):\n",
-    "        # dp[i][j] += dp[i-1][j]\n",
-    "\n",
-    "        if 0 <= j - arr[i] <= 20:\n",
-    "            dp[i][j-arr[i]] += dp[i-1][j]\n",
-    "\n",
-    "        if 0 <= j + arr[i] <= 20:\n",
-    "            dp[i][j+arr[i]] += dp[i-1][j]\n",
-    "\n",
-    "print(*dp, sep='\\n')\n",
-    "print(dp[n-2][target])\n",
     "\n"
    ]
   }
